# indicium_ai_eng

./: .env.example  .gitignore  pyproject.toml  readme.md  settings.py
reports/templates/: sars_report_template.html
scripts/: run_chart_calc.py  run_chart_designer.py  run_chart_pipeline.py  run_hello_world.py  run_metrics.py  run_news_searcher.py  run_report.py  run_report_maker.py  run_synthesis.py  utils.py
src/: agent_nodes.py  agent_schema.py  main_agent.py
src/domain/sars/: schema_context.py
src/internal/data_retrieval/adapters/: datasus_loader_csv.py  sqlite_loader.py
src/nodes/: base.py
src/tools/: file_handler_tool.py  mock_sql_tool.py  mock_web_search_tool.py  plot_tool.py  report_tool.py  sql_tool.py  web_search_tool.py
src/workflows/: agent_state.py  base_workflow.py  chart_calc_workflow.py  chart_calculator_workflow.py  chart_designer_workflow.py  chart_pipeline_workflow.py  factory.py  hello_world_workflow.py  metrics_workflow.py  news_workflow.py  report_maker_workflow.py  srag_conditional_workflow.py  srag_linear_workflow.py  srag_parallel_workflow.py  synthesis_workflow.py  workflow_config.py  workflow_states.py
src/workflows/agents/chart_calculator/: node.py  prompts.py  states.py
src/workflows/agents/chart_designer/: node.py  prompts.py  states.py
src/workflows/agents/greeter/: node.py  states.py
src/workflows/agents/intent_agent/: node.py  prompts.py
src/workflows/agents/metric_analyst/: node.py  prompts.py  states.py
src/workflows/agents/metric_analyst_llm/: config.py  node.py  prompts.py
(+12 files in other folders)
